Afegit Material Add, Edit, Delete. Canvi en scheme de Material. Canvi formalitzacio Swagger
