# models/material.js
@@ -4,7 +4,7 @@ var Material = new mongoose.Schema({
 	name: {type : String, required : true},
 	description: {type : String, required : false},
 	urgent: {type: Boolean, required: true},
-	quantity: {type : String, required : true},
+	quantity: {type : Number, min: 0, required : true},
 	address: {type : String, required : false}
 });
 
